--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -97,10 +97,10 @@ footer {
         <li><a href="#"><strong><small>APPLICATION</small></strong></a></li>
       </ul>
   	  <div class="nav navbar-btn pull-right">
-        <%= link_to 'login', :type => 'button', :class => 'btn btn-link navbar-btn' do %>
+        <%= link_to new_member_session_path, :type => 'button', :class => 'btn btn-link navbar-btn' do %>
           <small><strong>SIGN IN</strong></small>
         <% end %>
-        <%= link_to 'register', :type => 'button', :class => 'btn btn-default btn-danger navbar-btn' do %>
+        <%= link_to new_member_registration_path, :type => 'button', :class => 'btn btn-default btn-danger navbar-btn' do %>
           <span class="glyphicon glyphicon-user"></span>
           Create Free Account
         <% end %>
