--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -75,10 +75,16 @@
 				<p class="lead text-danger"><strong>Why wait? It's free!</strong><br>
 					<small>Sign up now and get everything work online</small></p>
 					<%= devise_error_messages! %>
+          <div class="form-group">
+            <div class="input-group control-group">
+              <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
+              <%= f.text_field :username, :autofocus => true, :class => 'form-control', :type => 'text', :placeholder => 'Username' %>
+            </div>
+          </div>
 					<div class="form-group">
 						<div class="input-group control-group">
 							<span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
-							<%= f.email_field :email, :autofocus => true, :class => 'form-control', :type => 'email', :placeholder => 'Email Address' %>
+							<%= f.email_field :email, :class => 'form-control', :type => 'email', :placeholder => 'Email address' %>
 						</div>
 					</div>
 					<div class="form-group">
@@ -90,7 +96,7 @@
 					<div class="form-group">
 						<div class="input-group control-group">
 							<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-							<%= f.password_field :password_confirmation, :class => 'form-control', :type => 'password', :placeholder => 'Confirm Password' %>
+							<%= f.password_field :password_confirmation, :class => 'form-control', :type => 'password', :placeholder => 'Confirm password' %>
 						</div>
 					</div>
 					<p class="text-right">* All fields are required</p>
