fixed email/login path controller/model

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -64,7 +64,7 @@
       <div class="form-group">
       	<div class="input-group control-group">
       		<span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
-      		<%= f.email_field :email, :autofocus => true, :class => 'form-control', :type => 'email' %>
+      		<%= f.email_field :login, :autofocus => true, :class => 'form-control', :type => 'email' %>
       	</div>
       </div>
       <%= f.submit "Send me reset password instructions", :class => 'btn btn-danger btn-sm' %>
