--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -53,7 +53,7 @@
         <li><a href="#"><strong><small>APPLICATION</small></strong></a></li>
       </ul>
       <div class="nav navbar-btn pull-right">
-	        <%= link_to new_member_session_path, :type => 'button', :class => 'btn btn-default btn-danger navbar-btn' do %>
+	        <%= link_to login_path, :type => 'button', :class => 'btn btn-default btn-danger navbar-btn' do %>
 	          <span class="glyphicon glyphicon-envelope"></span>
 	          Have an account? Sign in
 	        <% end %>
@@ -99,6 +99,9 @@
 							<%= f.password_field :password_confirmation, :class => 'form-control', :type => 'password', :placeholder => 'Confirm password' %>
 						</div>
 					</div>
+          <div class="form-group">
+            <%= recaptcha_tags %>
+          </div>
 					<p class="text-right">* All fields are required</p>
 					<%= f.submit "Sign up", :class => 'btn btn-danger btn-block btn-lg' %>
 				<% end %>
