--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -45,7 +45,7 @@
         <li><a href="#"><strong><small>APPLICATION</small></strong></a></li>
       </ul>
       <div class="nav navbar-btn pull-right">
-        <%= link_to new_member_registration_path, :type => 'button', :class => 'btn btn-default btn-danger navbar-btn' do %>
+        <%= link_to register_path, :type => 'button', :class => 'btn btn-default btn-danger navbar-btn' do %>
           <span class="glyphicon glyphicon-user"></span>
           Create Free Account
         <% end %>
@@ -68,7 +68,7 @@
       	</div>
       </div>
       <%= f.submit "Send me reset password instructions", :class => 'btn btn-danger btn-sm' %>
-      <%= link_to "Return to login page", new_member_session_path, :class => 'btn btn-primary btn-sm' %>
+      <%= link_to "Return to login page", login_path, :class => 'btn btn-primary btn-sm' %>
       <% end %>
   	</div>
   </div>
