--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -100,7 +100,7 @@ footer {
         <%= link_to new_member_session_path, :type => 'button', :class => 'btn btn-link navbar-btn' do %>
           <small><strong>SIGN IN</strong></small>
         <% end %>
-        <%= link_to new_member_registration_path, :type => 'button', :class => 'btn btn-default btn-danger navbar-btn' do %>
+        <%= link_to register_path, :type => 'button', :class => 'btn btn-default btn-danger navbar-btn' do %>
           <span class="glyphicon glyphicon-user"></span>
           Create Free Account
         <% end %>
