fixed login path

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -97,7 +97,7 @@ footer {
         <li><a href="#"><strong><small>APPLICATION</small></strong></a></li>
       </ul>
   	  <div class="nav navbar-btn pull-right">
-        <%= link_to new_member_session_path, :type => 'button', :class => 'btn btn-link navbar-btn' do %>
+        <%= link_to login_path, :type => 'button', :class => 'btn btn-link navbar-btn' do %>
           <small><strong>SIGN IN</strong></small>
         <% end %>
         <%= link_to register_path, :type => 'button', :class => 'btn btn-default btn-danger navbar-btn' do %>
