change background to details

--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -257,7 +257,7 @@ body {
 
       <hr class="featurette-divider">
 
-      <p class="lead">Background <button type="button" class="btn btn-primary btn-xs" rel="edit" data-container="body" data-placement="right" data-trigger="hover" data-toggle="tooltip" title="Edit"><span class="glyphicon glyphicon-edit"></span></button></p>
+      <p class="lead">Details <button type="button" class="btn btn-primary btn-xs" rel="edit" data-container="body" data-placement="right" data-trigger="hover" data-toggle="tooltip" title="Edit"><span class="glyphicon glyphicon-edit"></span></button></p>
      
       <div class="row">
         <div class="col-md-6">
