Make a changes in profile_page (job featured)

--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -174,41 +174,43 @@ body {
         </div>
       </div>
       <div id="wrapper">
-        <div class="list-group">
-          <p class="list-group-item lead active">
-            Job Featured
-            <button type="button" class="btn btn-default btn-xs pull-right" rel="verify" data-container="body" data-placement="bottom" data-trigger="hover" data-toggle="tooltip" title="Verified"><span class="glyphicon glyphicon-list"></span></button>
-          </p>
-          <a href="#" class="list-group-item">
-            <img src="icons/Banner.png" class="media-object" alt="job1">
-            <h5 class="list-group-item-heading">Linux System Administrator</h5>
-            <p class="list-group-item-text"><strong>By:</strong> Apple, Inc</p>
-            <p class="list-group-item-text"><strong>Closing Date:</strong> Sept 11th, 2013</p>
-          </a>
-          <a href="#" class="list-group-item">
-            <img src="icons/Graph.png" class="media-object" alt="job1">
-            <h5 class="list-group-item-heading">Graphic Designer</h5>
-            <p class="list-group-item-text"><strong>By:</strong> Facebook, Inc</p>
-            <p class="list-group-item-text"><strong>Closing Date:</strong> Oct 04th, 2013</p>
-          </a>
-          <a href="#" class="list-group-item">
-            <img src="icons/Earth.png" class="media-object" alt="job1">
-            <h5 class="list-group-item-heading">Front-End Developer</h5>
-            <p class="list-group-item-text"><strong>By:</strong> Samsung Malaysia</p>
-            <p class="list-group-item-text"><strong>Closing Date:</strong> Oct 21th, 2013</p>
-          </a>
-          <a href="#" class="list-group-item">
-            <img src="icons/Mail.png" class="media-object" alt="job1">
-            <h5 class="list-group-item-heading">Senior Account Manager</h5>
-            <p class="list-group-item-text"><strong>By:</strong> Malayan Bankin Berhad</p>
-            <p class="list-group-item-text"><strong>Closing Date:</strong> Nov 01th, 2013</p>
-          </a>
-          <a href="#" class="list-group-item">
-            <img src="icons/Mountain.png" class="media-object" alt="job1">
-            <h5 class="list-group-item-heading">PHP Developer</h5>
-            <p class="list-group-item-text"><strong>By:</strong> Media Prima Berhad</p>
-            <p class="list-group-item-text"><strong>Closing Date:</strong> Nov 13th, 2013</p>
-          </a>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <strong>JOB FEATURED</strong>
+            <button type="button" class="btn btn-default btn-xs pull-right" rel="view-all" data-container="body" data-placement="left" data-trigger="hover" data-toggle="tooltip" title="View all jobs"><span class="glyphicon glyphicon-list"></span></button>
+          </div>
+          <ol class="list-group">
+            <a href="#" class="list-group-item">
+              <img src="icons/Banner.png" class="media-object" alt="job1">
+              <h5 class="list-group-item-heading">Linux System Administrator</h5>
+              <p class="list-group-item-text"><strong>By:</strong> Apple, Inc</p>
+              <p class="list-group-item-text"><strong>Closing Date:</strong> Sept 11th, 2013</p>
+            </a>
+            <a href="#" class="list-group-item">
+              <img src="icons/Graph.png" class="media-object" alt="job1">
+              <h5 class="list-group-item-heading">Graphic Designer</h5>
+              <p class="list-group-item-text"><strong>By:</strong> Facebook, Inc</p>
+              <p class="list-group-item-text"><strong>Closing Date:</strong> Oct 04th, 2013</p>
+            </a>
+            <a href="#" class="list-group-item">
+              <img src="icons/Earth.png" class="media-object" alt="job1">
+              <h5 class="list-group-item-heading">Front-End Developer</h5>
+              <p class="list-group-item-text"><strong>By:</strong> Samsung Malaysia</p>
+              <p class="list-group-item-text"><strong>Closing Date:</strong> Oct 21th, 2013</p>
+            </a>
+            <a href="#" class="list-group-item">
+              <img src="icons/Mail.png" class="media-object" alt="job1">
+              <h5 class="list-group-item-heading">Senior Account Manager</h5>
+              <p class="list-group-item-text"><strong>By:</strong> Malayan Bankin Berhad</p>
+              <p class="list-group-item-text"><strong>Closing Date:</strong> Nov 01th, 2013</p>
+            </a>
+            <a href="#" class="list-group-item">
+              <img src="icons/Mountain.png" class="media-object" alt="job1">
+              <h5 class="list-group-item-heading">PHP Developer</h5>
+              <p class="list-group-item-text"><strong>By:</strong> Media Prima Berhad</p>
+              <p class="list-group-item-text"><strong>Closing Date:</strong> Nov 13th, 2013</p>
+            </a>
+          </ol>
         </div>
       </div>
     </div>
