insert blockquote in profile description

--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -261,6 +261,11 @@ body {
           <p class="form-control-static">
             <small>Other duties may include scripting or light programming, project management for systems-related projects, supervising or training computer operators, and being the consultant for computer problems beyond the knowledge of technical support staff in our company.</small>
           </p>
+          <p class="form-control-static">
+            <blockquote>
+              <p>Who is never done make a mistake in life, then he/she will never learn a new thing!</p>
+            </blockquote>
+          </p>
         </div>
       </form>
 
@@ -297,7 +302,7 @@ body {
             </div>
             <div class="form-group">
               <label><span class="glyphicon glyphicon-earphone"></span> Contact Number</label>
-              <p class="form-control-static"><small>+60.19515**** </small><button type="button" class="btn btn-warning btn-xs">Click to show</button></p>
+              <p class="form-control-static"><small>+60.19515**** </small><button type="button" class="btn btn-link btn-xs"><abbr title="Show phone number">Click to show</abbr></button></p>
             </div>
             <div class="form-group">
               <label><span class="glyphicon glyphicon-bell"></span> Marriage Status</label>
