--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -76,9 +76,23 @@
 					<small>Sign up now and get everything work online</small></p>
 					<%= devise_error_messages! %>
           <div class="form-group">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="control-group">
+                  <%= f.text_field :first_name, :autofocus => true, :class => 'form-control', :type => 'text', :placeholder => 'First Name' %>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="control-group">
+                  <%= f.text_field :last_name, :class => 'form-control', :type => 'text', :placeholder => 'Last Name' %>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
             <div class="input-group control-group">
               <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
-              <%= f.text_field :username, :autofocus => true, :class => 'form-control', :type => 'text', :placeholder => 'Username' %>
+              <%= f.text_field :username, :class => 'form-control', :type => 'text', :placeholder => 'Username' %>
             </div>
           </div>
 					<div class="form-group">
