--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -221,7 +221,7 @@ body {
           <%= image_tag @current_member.gravatar_url(:size => 180), :class => 'img-thumbnail' %>
         </div>
         <div class="col-md-9">
-          <h2><%= current_member.first_name %> <%= current_member.first_name %> <button type="button" class="btn btn-primary btn-xs" rel="verify" data-container="body" data-placement="bottom" data-trigger="hover" data-toggle="tooltip" title="Verified"><span class="glyphicon glyphicon-ok"></span></button>
+          <h2><%= current_member.first_name %> <%= current_member.last_name %> <button type="button" class="btn btn-primary btn-xs" rel="verify" data-container="body" data-placement="bottom" data-trigger="hover" data-toggle="tooltip" title="Verified"><span class="glyphicon glyphicon-ok"></span></button>
             <div class="btn-group">
               <button type="button" class="btn btn-danger btn-xs" data-toggle="button" rel="star-user" data-container="body" data-placement="bottom" data-trigger="hover" data-toggle="tooltip" title="Star this user">
                 <span class="glyphicon glyphicon-star"></span> Star
