--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -79,12 +79,12 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="control-group">
-                  <%= f.text_field :first_name, :autofocus => true, :class => 'form-control', :type => 'text', :placeholder => 'First Name' %>
+                  <%= f.text_field :first_name, :autofocus => true, :class => 'form-control', :type => 'text', :placeholder => 'First Name', :autocomplete => 'off' %>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="control-group">
-                  <%= f.text_field :last_name, :class => 'form-control', :type => 'text', :placeholder => 'Last Name' %>
+                  <%= f.text_field :last_name, :class => 'form-control', :type => 'text', :placeholder => 'Last Name', :autocomplete => 'off' %>
                 </div>
               </div>
             </div>
@@ -92,13 +92,13 @@
           <div class="form-group">
             <div class="input-group control-group">
               <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
-              <%= f.text_field :username, :class => 'form-control', :type => 'text', :placeholder => 'Username' %>
+              <%= f.text_field :username, :class => 'form-control', :type => 'text', :placeholder => 'Username', :autocomplete => 'off' %>
             </div>
           </div>
 					<div class="form-group">
 						<div class="input-group control-group">
 							<span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
-							<%= f.email_field :email, :class => 'form-control', :type => 'email', :placeholder => 'Email address' %>
+							<%= f.email_field :email, :class => 'form-control', :type => 'email', :placeholder => 'Email address', :autocomplete => 'off' %>
 						</div>
 					</div>
 					<div class="form-group">
